--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@shopify/react-native-skia": "^1.2.3",
+    "d3": "^7.9.0",
     "expo": "^51.0.31",
     "expo-speech": "^12.0.2",
     "expo-status-bar": "~1.12.1",
